--- a/concept.tex
+++ b/concept.tex
@@ -80,6 +80,10 @@ Ansanz gewählt werden.
 
 
 \subsection*{Allgemeiner Aufbau}
+Programmiersprache: Scala
+Framework: Finagle
+Service Architektur
+
 
 
 \subsubsection*{Fragen Taggen }
