--- a/praesentation/praesentation.tex
+++ b/praesentation/praesentation.tex
@@ -585,6 +585,8 @@ Recommendations for User
   \item Take the top k unknown items (with the right context) from each user $\in$ SU
   \item Use cosinus similarity for rating weighting
 \end{itemize}
+prediction for user U
+  for each similar user B to U
 \normalsize
 }
 
