--- a/schriftliche ausarbeitung/diplomarbeit.tex
+++ b/schriftliche ausarbeitung/diplomarbeit.tex
@@ -66,6 +66,9 @@
   \usepackage{graphicx}
 \fi    
 \usepackage{todonotes}
+\usepackage{tikz}
+\usetikzlibrary{automata,positioning}
+
 
 \setlength{\parindent}{0cm}
 
@@ -341,22 +344,67 @@ However the direct implementation of the \emph{levenshtein distance algorithm} h
 \end{definition}
 
 An optimized version of the \emph{levenshtein distance algorithm} that uses a deterministic finite automata was introduced in \emph{Fast string correction with Levenshtein automata by Schulz and Mihov}. 
-The deterministic finite automata for a word $W \in \Sigma^*$ is a \emph{levenshtein automata} with degree $n \in \mathbb{N}$ with n length of W and has has the following structure:
+The deterministic finite automata for a word $W \in \Sigma^*$ is a \emph{levenshtein automata} with degree $n \in \mathbb{N}$ with n length of W.
 \todo{optimize this, probably better if I write this as out with a face in my mind.}
-\begin{itemize}
-  \item $\Sigma$ is the complete alphabet
-  \item Each state in Q denotes for an insert word $\omega \in \Sigma^*$ the number of matching letters together with $d_L(\omega,W)$
-  \item The initial state $q_0$ is the state with insert count 0 and \emph{levenshtein distance} 0
-  \item The function $\delta$ is the known function $\delta : Q \times \Sigma \rightarrow Q$. \todo{definiere delta}
-  \item The set of final states F contains all states where the correct letter count is equal to the size of the original word W.
-\end{itemize}
 
-The deterministic finite automata with degree $n \in \mathbb{N}$ for a word $W \in \Sigma^*$ can decide in linear time if for a word $V \in \Sigma^*$ $d_L(W,V) \leq n$.
+The purpose of the \emph{levenshtein automata} is to decide whether $d_L(W,V)$ is smaller than a specific n with $V \in \Sigma^*$.
+So, it is possible to decide if a word from a question is similar to a word from the \emph{STW Standard Thesaurus}, similar in the meaning it has a \emph{levenshtein distance} smaller than n.
+Therefore $\Sigma$ contains the alphabet \{a,\ldots,z,A,\ldots,Z\}.
+The states in Q of the \emph{levenshtein automata} denote how many letters are read i and the current \emph{levenshtein distance} between $\omega$ and W j, with $\omega$ prefix of V.
+The label of such a state is $i^j$.
+Thus the initial state $q_0 \in Q$ is $0^0$.
+The final states $f \in F$ are all states where i equals |W| and j is smaller than n.
+The function $\delta: (Q \times \Sigma \rightarrow Q)$ is mapped as follows\todo{right translation}:\\ 
+\begin{math}
+(i^j, \sigma) \rightarrow \begin{cases}
+  (i+1)^j & \text{if correct}\\
+  (i)^{(j+1)} & \text{if deletion}\\
+  (i+1)^{(j+1)} & \text{if substitution or insertion}\\
+  empty & \text{if j is equal to n}
+\end{cases}
+\end{math}
+
+Levenshtein automata example for the word test with max \emph{levenshtein distance} 1.
+\begin{tikzpicture}[->,auto,node distance=1.0cm,line width=0.2mm] 
+  \node[state,initial] (q_0)   {$\begin{matrix} 0^0 & 1^1 \end{matrix}$}; 
+   \node[state] (q_1) [below left=of q_0] {$\begin{matrix} 1^0 & 1^1\\ 0^1 & 2^1 \end{matrix}$}; 
+   \node[state] (q_2) [below =of q_1] {$\begin{matrix} 2^0 & 2^1\\ 1^1 & 3^1 \end{matrix}$}; 
+   \node[state] (q_3) [below =of q_2] {$\begin{matrix} 3^0 & 3^1\\ 2^1 & 4^1 \end{matrix}$}; 
+   \node[state] (q_4) [below =of q_3] {$\begin{matrix} 4^0 & 4^1\\ 3^1 \end{matrix}$}; 
+   \node[state] (q_5) [below =of q_4] {$\begin{matrix} 4^1 & \quad\\ \quad & \quad \end{matrix}$}; 
+   \node[state] (q_6) [right =of q_4] {$\begin{matrix} 3^1 & 4^1\\ \quad & \quad \end{matrix}$}; 
+   \node[state] (q_7) [right =of q_3] {$\begin{matrix} 2^1 & 3^1\\ 4^1 & \quad \end{matrix}$}; 
+   \node[state,accepting,minimum size=4.5em](q_4) [below =of q_3] ;
+   \node[state,accepting,minimum size=4.5em](q_3) [below =of q_2] ;
+   \node[state,accepting,minimum size=4.5em](q_5) [below =of q_4] ;
+    \path[->] 
+    (q_0) edge  node {t} (q_1)
+    (q_1) edge  node  {e} (q_2)
+    (q_2) edge  node  {s} (q_3)
+    (q_3) edge  node  {t} (q_4)
+    (q_4) edge  node  {*} (q_5)
+    (q_3) edge  node  {$\neg t$} (q_6)
+    (q_6) edge  node  {t} (q_5)
+    (q_2) edge  node  {t} (q_7)
+\end{tikzpicture}
+
+
+
+% \begin{itemize}
+%   \item $\Sigma$ is the complete alphabet
+%   \item Each state in Q denotes for an insert word $\omega \in \Sigma^*$ the number of matching letters together with $d_L(\omega,W)$
+%   \item The initial state $q_0$ is the state with insert count 0 and \emph{levenshtein distance} 0
+%   \item The function $\delta$ is the known function $\delta : Q \times \Sigma \rightarrow Q$. \todo{definiere delta}
+%   \item The set of final states F contains all states where the correct letter count is equal to the size of the original word W.
+% \end{itemize}
+
+This deterministic finite automata with degree $n \in \mathbb{N}$ for a word $W \in \Sigma^*$ can decide in linear time if for a word $V \in \Sigma^*$ $d_L(W,V) \leq n$ source Lemma3.
+\subsubsection{The generation process of the levenshtein automata}
 
 %how to generate levenshtein automata
 %optimization generate dfa directly or use table based evaluation method
 
-Lemma 6 For any fixed number n, given two words W and V of length w and v respectively, it is decidable in time O(max(w, v)) if the Levenshtein distance between W and V is <= n.
+%Lemma 6 For any fixed number n, given two words W and V of length w and v respectively, it is decidable in time O(max(w, v)) if the Levenshtein distance between W and V is <= n.
 
 The current system implementation calculates for every word from the text an automata and reads all words from the \emph{STW Thesaurus for Economics}. If a word from the \emph{STW Thesaurus for Economics} ends in a final state it is used as a tag for the text. 
 \todo{describe word size maximum correction count correlation.}
